--- a/glade/session_upload.glade
+++ b/glade/session_upload.glade
@@ -36,7 +36,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Jumps</property>
+                        <property name="label">Jumps</property>
                       </widget>
                       <packing>
                         <property name="left_attach">1</property>
@@ -50,7 +50,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Jumps
+                        <property name="label">Jumps
 reactive</property>
                       </widget>
                       <packing>
@@ -65,7 +65,7 @@ reactive</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Runs</property>
+                        <property name="label">Races</property>
                       </widget>
                       <packing>
                         <property name="left_attach">3</property>
@@ -79,7 +79,7 @@ reactive</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Runs
+                        <property name="label">Races
 intervallic</property>
                       </widget>
                       <packing>
@@ -94,7 +94,7 @@ intervallic</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Reaction
+                        <property name="label">Reaction
 times</property>
                       </widget>
                       <packing>
@@ -109,7 +109,7 @@ times</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Pulses</property>
+                        <property name="label">Pulses</property>
                       </widget>
                       <packing>
                         <property name="left_attach">6</property>
@@ -123,7 +123,7 @@ times</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Multi Chronopic</property>
+                        <property name="label">Multi Chronopic</property>
                       </widget>
                       <packing>
                         <property name="left_attach">7</property>
@@ -233,7 +233,7 @@ times</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Persons</property>
+                        <property name="label">Persons</property>
                         <property name="use_markup">True</property>
                       </widget>
                       <packing>
@@ -273,7 +273,7 @@ times</property>
               <widget class="GtkLabel" id="label542">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Names will be hidden</property>
+                <property name="label">Names will be hidden</property>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -291,7 +291,8 @@ times</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="yalign">0</property>
-                    <property name="label" translatable="yes">Codes:</property>
+                    <property name="label">Codes:
+</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -303,7 +304,7 @@ times</property>
                   <widget class="GtkLabel" id="label544">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">&lt;i&gt;U&lt;/i&gt; Uploaded.
+                    <property name="label">&lt;i&gt;U&lt;/i&gt; Uploaded.
 &lt;i&gt;E&lt;/i&gt; Not uploaded. Already Exists.
 &lt;i&gt;S&lt;/i&gt; Not uploaded. Simulated test.</property>
                     <property name="use_markup">True</property>
@@ -382,7 +383,7 @@ times</property>
               <widget class="GtkLabel" id="label_thanks">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Thanks for your time.  Graphs will be updated on server at 3h7min UTC.</property>
+                <property name="label">Thanks for your time.  Graphs will be updated on server at 3h7min UTC.</property>
                 <property name="use_markup">True</property>
               </widget>
               <packing>
